--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -1,2 +1,34 @@
 .landing_page {
+  background-color: var(--bg);
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0px 60px;
+}
+
+.landing_page header {
+  width: 100%;
+  height: fit-content;
+  padding: 40px;
+}
+
+.landing_page header img {
+  width: 260px;
+  height: auto;
+}
+
+.landing_page main {
+  flex: 4;
+  width: 100%;
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  color: var(--secondary);
+  gap: 40px;
+}
+
+.landing_page main h3 {
+  font-weight: 500;
 }
