--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -32,3 +32,11 @@
 .landing_page main h3 {
   font-weight: 500;
 }
+
+.metamask {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--secondary);
+}
